# language-data

./: .deepsource.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .weblate  LICENSE  MANIFEST.in  Makefile  PLURALS_DIFF.md  README.md  README.rst  REUSE.toml  add-iso  aliases.csv  case-insensitive.csv  cldr.csv  default_countries.csv  export-cldr  export-cldr-native  export-gettext  export-l10n-guide  export-languages-po  export-translate  extract-plural-tags  extraplurals.csv  gen-iso-aliases  gettext.csv  l10n-guide.csv  languages.csv  lint  list-diff  population-fallback.csv  population.csv  pyproject.toml  qt.csv  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  (+5 more)
.github/: dependabot.yml  release.yml  renovate.json
.github/ISSUE_TEMPLATE/: language_request.yml
.github/workflows/: codeql-analysis.yml  dependency-review.yml  label-sync.yml  lint.yml  make.yml  mypy.yml  pre-commit.yml  setup.yml  submodules-update.yml  test.yml  update-generated.yml  workflow.yml
.reuse/: dep5
cldr-core/common/dtd/: ldml.dtd  ldmlSupplemental.dtd
languages-po/: ab.po  af-NA.po  af.po  agq.po  ak.po  am.po  an.po  ann.po  apc.po  ar-AE.po  ar-BH.po  ar-DJ.po  ar-DZ.po  ar-EG.po  ar-EH.po  ar-ER.po  ar-IL.po  ar-IQ.po  ar-JO.po  ar-KM.po  ar-KW.po  ar-LB.po  ar-LY.po  ar-MA.po  ar-MR.po  ar-OM.po  ar-PS.po  ar-QA.po  ar-SA.po  ar-SD.po  ar-SO.po  ar-SS.po  ar-SY.po  ar-TD.po  ar-TN.po  ar-YE.po  ar.po  ar_EG.po  ar_LY.po  ar_SA.po  (+708 more)
scripts/: add-iso  add-iso-population  add-iso-population.py  add-iso.py  copy-pot-date  copy-pot-date.sh  export-cldr  export-cldr-case  export-cldr-case.py  export-cldr-orientation  export-cldr-orientation.py  export-cldr-population  export-cldr-population.py  export-cldr.py  export-gettext  export-gettext.py  export-iso-aliases  export-iso-aliases.py  export-iso-languages  export-iso-languages.py  export-l10n-guide  export-l10n-guide.py  export-languages-po  export-languages-po.py  export-macrolanguages  export-macrolanguages.py  export-plural-tags  export-plural-tags.py  export-qt  export-qt.py  export-translate  export-translate.py  export-w3c-scripts.py  export-wikidata-population.py  generate-language-data  generate-language-data.py  get-lang-data-path.py  lint  lint.py  list-diff  (+1 more)
weblate_language_data/: __init__.py  admin.py  aliases.py  ambiguous.py  apps.py  case_insensitive.py  check_languages.py  countries.py  country_codes.py  docs.py  language_codes.py  languages.py  plural_tags.py  plurals.py  population.py  rtl.py  tests.py  utils.py  views.py
weblate_language_data/locale/: django.pot
weblate_language_data/locale/ab/LC_MESSAGES/: django.po
weblate_language_data/locale/af/LC_MESSAGES/: django.po
weblate_language_data/locale/afh/LC_MESSAGES/: django.po
weblate_language_data/locale/ang/LC_MESSAGES/: django.po
weblate_language_data/locale/apc/LC_MESSAGES/: django.po
weblate_language_data/locale/ar/LC_MESSAGES/: django.po
weblate_language_data/locale/ar_LY/LC_MESSAGES/: django.po
weblate_language_data/locale/ars/LC_MESSAGES/: django.po
weblate_language_data/locale/arz/LC_MESSAGES/: django.po
weblate_language_data/locale/ast/LC_MESSAGES/: django.po
weblate_language_data/locale/awa/LC_MESSAGES/: django.po
weblate_language_data/locale/az/LC_MESSAGES/: django.po
weblate_language_data/locale/ba/LC_MESSAGES/: django.po
weblate_language_data/locale/ba_LATN/LC_MESSAGES/: django.po
weblate_language_data/locale/bar/LC_MESSAGES/: django.po
weblate_language_data/locale/be/LC_MESSAGES/: django.po
weblate_language_data/locale/be@latin/LC_MESSAGES/: django.po
weblate_language_data/locale/be_Latn/LC_MESSAGES/: django.po
weblate_language_data/locale/ber/LC_MESSAGES/: django.po
weblate_language_data/locale/bg/LC_MESSAGES/: django.po
weblate_language_data/locale/bn/LC_MESSAGES/: django.po
weblate_language_data/locale/bn_BD/LC_MESSAGES/: django.po
weblate_language_data/locale/bnt/LC_MESSAGES/: django.po
weblate_language_data/locale/bo/LC_MESSAGES/: django.po
weblate_language_data/locale/br/LC_MESSAGES/: django.po
weblate_language_data/locale/ca/LC_MESSAGES/: django.po
weblate_language_data/locale/ce/LC_MESSAGES/: django.po
weblate_language_data/locale/chn/LC_MESSAGES/: django.po
weblate_language_data/locale/ckb/LC_MESSAGES/: django.po
weblate_language_data/locale/crh/LC_MESSAGES/: django.po
weblate_language_data/locale/cs/LC_MESSAGES/: django.po
weblate_language_data/locale/cv/LC_MESSAGES/: django.po
weblate_language_data/locale/cy/LC_MESSAGES/: django.po
weblate_language_data/locale/da/LC_MESSAGES/: django.po
weblate_language_data/locale/de/LC_MESSAGES/: django.po
weblate_language_data/locale/dv/LC_MESSAGES/: django.po
weblate_language_data/locale/el/LC_MESSAGES/: django.po
weblate_language_data/locale/en_GB/LC_MESSAGES/: django.po
weblate_language_data/locale/en_US/LC_MESSAGES/: django.po
weblate_language_data/locale/enm/LC_MESSAGES/: django.po
weblate_language_data/locale/eo/LC_MESSAGES/: django.po
weblate_language_data/locale/es/LC_MESSAGES/: django.po
weblate_language_data/locale/et/LC_MESSAGES/: django.po
weblate_language_data/locale/eu/LC_MESSAGES/: django.po
weblate_language_data/locale/fa/LC_MESSAGES/: django.po
weblate_language_data/locale/fi/LC_MESSAGES/: django.po  fi.po~
weblate_language_data/locale/fil/LC_MESSAGES/: django.po
weblate_language_data/locale/fr/LC_MESSAGES/: django.po  fr.po~
weblate_language_data/locale/fur/LC_MESSAGES/: django.po
weblate_language_data/locale/fy/LC_MESSAGES/: django.po
weblate_language_data/locale/ga/LC_MESSAGES/: django.po
weblate_language_data/locale/gl/LC_MESSAGES/: django.po
weblate_language_data/locale/he/LC_MESSAGES/: django.po
weblate_language_data/locale/hi/LC_MESSAGES/: django.po
weblate_language_data/locale/hi_Latn/LC_MESSAGES/: django.po
weblate_language_data/locale/hr/LC_MESSAGES/: django.po
weblate_language_data/locale/hu/LC_MESSAGES/: django.po
weblate_language_data/locale/hy/LC_MESSAGES/: django.po
(+81 files in other folders)
