[metadata]
name = weblate-language-data
version = 2024.5
description = Language definitions for Weblate
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://weblate.org/
author = Michal Čihař
author_email = michal@weblate.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Utilities
download_url = https://github.com/WeblateOrg/language-data
keywords = i18n l10n gettext git mercurial translate
project_urls =
    Issue Tracker=https://github.com/WeblateOrg/language-data/issues
    Documentation=https://docs.weblate.org/
    Source Code=https://github.com/WeblateOrg/language-data
    Twitter=https://twitter.com/WeblateOrg
    Funding=https://weblate.org/donate/

[options]
packages = weblate_language_data
python_requires = >=3.9
include_package_data = 1
package_dir = weblate_language_data=weblate_language_data

[options.extras_require]
django = Django

[flake8]
max-complexity = 16
extend-select = E,W1,W2,W3,W504,W505,W6
enable-extensions = B,C,D,F,G,I,M,N,R,SF
# Should be fixed:
#  D10 - we are missing many docstrings
#  D20* - wrong docstring formatting
#  D40* - many strings need rephrasing
extend-ignore = D10,D200,D202,D204,D205,D209,D401,T201,T203
exclude = .git,docs,.venv,build,.eggs
max-line-length = 88
per-file-ignores =
    weblate_language_data/languages.py:E501
    weblate_language_data/plurals.py:E501

[pycodestyle]
extend-select = E,W1,W2,W3,W504,W505,W6
exclude = .git,docs,.venv,build,.eggs
max-line-length = 88
